# reviva

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README  README.md  SECURITY.md  SUPPORT.md  deny.toml  package.json  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml
crates/reviva-backend/: Cargo.toml
crates/reviva-backend/src/: lib.rs
crates/reviva-backend/tests/: mock_backend_test.rs
crates/reviva-cli/: Cargo.toml
crates/reviva-cli/src/: main.rs
crates/reviva-cli/tests/: cli_acceptance.rs
crates/reviva-core/: Cargo.toml
crates/reviva-core/src/: lib.rs
crates/reviva-export/: Cargo.toml
crates/reviva-export/src/: lib.rs
crates/reviva-export/tests/: snapshot_test.rs
crates/reviva-prompts/: Cargo.toml
crates/reviva-prompts/src/: lib.rs
crates/reviva-prompts/tests/: snapshot_test.rs
crates/reviva-repo/: Cargo.toml
crates/reviva-repo/src/: lib.rs
crates/reviva-repo/tests/: integration_test.rs
crates/reviva-storage/: Cargo.toml
crates/reviva-storage/src/: lib.rs
crates/reviva-storage/tests/: integration_test.rs
crates/reviva-tui/: Cargo.toml
crates/reviva-tui/src/: lib.rs
docs/: cli-reference.md  config-reference.md
fixtures/sample-repo/: README.md
scripts/benchmark/: run-v1-beta-benchmark.ps1  run-v1-beta-benchmark.sh
scripts/install/: install.ps1  install.sh
src/: backend.rs  cli.rs  core.rs  export.rs  lib.rs  main.rs  prompts.rs  repo.rs  storage.rs
tests/: cli_acceptance.rs  export_snapshot_test.rs  mock_backend_test.rs  prompts_snapshot_test.rs  repo_integration_test.rs  storage_integration_test.rs
