[workspace]
resolver = "2"
members = [
    "crates/reviva-core",
    "crates/reviva-repo",
    "crates/reviva-prompts",
    "crates/reviva-backend",
    "crates/reviva-storage",
    "crates/reviva-export",
    "crates/reviva-cli",
    "crates/reviva-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Erdem Arslan"]
license = "Apache-2.0"
repository = "https://github.com/laphilosophia/reviva"

# Shared dependency versions — pin here, reference with { workspace = true } in crates
[workspace.dependencies]
reviva-core = { path = "crates/reviva-core", version = "0.1.0" }
reviva-repo = { path = "crates/reviva-repo", version = "0.1.0" }
reviva-prompts = { path = "crates/reviva-prompts", version = "0.1.0" }
reviva-backend = { path = "crates/reviva-backend", version = "0.1.0" }
reviva-storage = { path = "crates/reviva-storage", version = "0.1.0" }
reviva-export = { path = "crates/reviva-export", version = "0.1.0" }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }

# ─── Test infrastructure (dev-only) ─────────────────────────────────────────
# insta: snapshot testing for prompt builder and export format regression.
insta = { version = "1", features = ["yaml"] }
# httpmock: mock HTTP server for backend error-path tests (no live model).
httpmock = "0.7"
# tempfile: ephemeral directories for fixture-based integration tests.
tempfile = "3"
