[package]
name = "reviva"
version = "0.1.0"
edition = "2021"
authors = ["Erdem Arslan"]
license = "Apache-2.0"
repository = "https://github.com/laphilosophia/reviva"
description = "Local-first review terminal for deterministic, inspectable, constrained repository analysis."

[[bin]]
name = "reviva"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
httpmock = "0.7"
tempfile = "3"


