[package]
name = "reviva-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See docs/module.md §reviva-backend
[dependencies]
reviva-core = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
