[package]
name = "reviva-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI entrypoint and orchestration layer for Reviva."

# The v1 primary entrypoint. Depends on all domain crates.
# See docs/module.md §reviva-cli
[[bin]]
name = "reviva"
path = "src/main.rs"

[dependencies]
reviva-core = { workspace = true }
reviva-repo = { workspace = true }
reviva-prompts = { workspace = true }
reviva-backend = { workspace = true }
reviva-storage = { workspace = true }
reviva-export = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }


