[package]
name = "reviva-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types and core contracts for Reviva."

# No external dependencies — this crate must remain domain-pure.
# See docs/module.md §reviva-core
[dependencies]


