[package]
name = "reviva-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Markdown and JSON export surface for Reviva sessions."

# See docs/module.md §reviva-export
[dependencies]
reviva-core = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }


