[package]
name = "reviva-prompts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prompt building, wrappers, and finding normalization for Reviva."

# See docs/module.md §reviva-prompts
[dependencies]
reviva-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }


