[package]
name = "reviva-repo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Repository traversal, target loading, and scan heuristics for Reviva."

# See docs/module.md §reviva-repo
[dependencies]
reviva-core = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }


