[package]
name = "reviva-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local persistence for sessions, findings, sets, and config in Reviva."

# See docs/module.md §reviva-storage
[dependencies]
reviva-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }


